@@ -9,7 +9,6 @@ void makegaussian(float *psf, int size, float fwhm, float lum, float xoffset, fl
 void makemoffat(float *psf, const int size, const float fwhm, const float lum, const float xoff, const float yoff, const float beta, float ratio, float angle);
 void makedisc(float *psf, int size, float radius, float lum, float xoffset, float yoffset);
 int starcount(psf_star **stars);
-int free_psf_starstarstar(psf_star **stars);
 
 #define SYNTHESIZE_GAUSSIAN 0
 #define SYNTHESIZE_MOFFAT 1
