@@ -10,6 +10,7 @@ XX/XX/XX
 * Fixed PLTSOLVD keyword that was not correctly propagated (#1807)
 * Fixed crash in seqstarnet (#1814)
 * Fixed seqpsf bug preventing astrometric registration in some circumstances (#1815)
+* Fixed writing RA/DEC to star lists from a single findstar command (#1794)
 * Fixed issue with RGB composition not always applying registration (!948)
 * Fixed crash in clearstar command wiht Dynamic PSF window open when called from python (#1821)
 
